--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "better-assert",
-    "version": "1.1.0",
+    "name": "@gerhobbelt/better-assert",
+    "version": "1.1.0-1",
     "license": "MIT",
     "description": "Better assertions for node, reporting the expr, filename, lineno and custom error messages",
     "keywords": [
@@ -23,6 +23,6 @@
     },
     "main": "index",
     "engines": {
-        "node": "*"
+        "node": ">=4"
     },
 }
