turned example.js into a demo + unit tests file which is now also used by `npm test` task.

--- a/package.json
+++ b/package.json
@@ -25,4 +25,8 @@
     "engines": {
         "node": ">=4"
     },
+    "scripts": {
+        "test": "node example.js",
+        "pub": "npm publish --access public"
+    }
 }
